<package format="2">
  <name>prius_teleop</name>
  <version>1.0.0</version>
  <description>
  Code to move a prius from the command line
  </description>
  <maintainer email="edoardorundeddu2021@u.northwestern.edu">Edoardo Rundeddu</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>prius_msgs</depend>

  <exec_depend>prius_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
